package no.kristiania.socialbuzz.db;

public record User(
    int id_user,
    String username,
    String name,
    String tlf

) {}
